X# Your branch is up-to-date with 'origin/master'.

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,11 @@
   animation: up-down  2s ease-in-out infinite alternate-reverse both;
 }
 
+ .hello1 img{
+   
+  height: 50px;
+}
+
 @-webkit-keyframes up-down{
   0%{
     transform: translateY(10px);
