--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -21,7 +22,6 @@
 .navbar-brand img{
   height: 40px;
   padding: 0;
-
 }
 
 .navbar a {
@@ -47,7 +47,6 @@
   height: 80vh;
   margin-top: 2px;
 }
-
 .webser{
   margin-top: 40px ;
 }
@@ -122,7 +121,9 @@ footer p{
 
 /* carousel  page */
 
-h1{color: aquamarine;}
+.kapil{color: aquamarine;
+font-size: 50px;
+}
 /* 
 .carousel-item img{
  width: auto;
